exports[`prefer-equality-assertion > invalid(1): import assert from 'node:assert';\nassert(a === b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert(a === b);

`;

exports[`prefer-equality-assertion > invalid(1): import assert from 'node:assert';\nassert(a === b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert(a === b);
    | ^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(a, b);

`;

exports[`prefer-equality-assertion > invalid(10): import test from 'node:test';\ntest('t', t => { t.assert.ok(a === b); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.ok(a === b); });

`;

exports[`prefer-equality-assertion > invalid(10): import test from 'node:test';\ntest('t', t => { t.assert.ok(a === b); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.ok(a === b); });
    |                  ^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.strictEqual(a, b); });

`;

exports[`prefer-equality-assertion > invalid(11): import assert from 'node:assert';\nassert.strict.ok(a === b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strict.ok(a === b);

`;

exports[`prefer-equality-assertion > invalid(11): import assert from 'node:assert';\nassert.strict.ok(a === b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strict.ok(a === b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strict.strictEqual(a, b);

`;

exports[`prefer-equality-assertion > invalid(12): import assert from 'node:assert';\nassert.strict(a !== b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strict(a !== b);

`;

exports[`prefer-equality-assertion > invalid(12): import assert from 'node:assert';\nassert.strict(a !== b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strict(a !== b);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over \`strict\` with a \`!==\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notStrictEqual(a, b);

`;

exports[`prefer-equality-assertion > invalid(13): import {strict as strictAssert} from 'node:assert';\nstrictAssert.ok(a !== b); 1`] = `

  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert.ok(a !== b);

`;

exports[`prefer-equality-assertion > invalid(13): import {strict as strictAssert} from 'node:assert';\nstrictAssert.ok(a !== b); 2`] = `

Message:
  1 | import {strict as strictAssert} from 'node:assert';
> 2 | strictAssert.ok(a !== b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over \`ok\` with a \`!==\` comparison for a clearer failure message.

Output:
  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert.notStrictEqual(a, b);

`;

exports[`prefer-equality-assertion > invalid(14): import {strict as strictAssert} from 'node:assert';\nstrictAssert(a === b); 1`] = `

  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert(a === b);

`;

exports[`prefer-equality-assertion > invalid(14): import {strict as strictAssert} from 'node:assert';\nstrictAssert(a === b); 2`] = `

Message:
  1 | import {strict as strictAssert} from 'node:assert';
> 2 | strictAssert(a === b);
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert.strictEqual(a, b);

`;

exports[`prefer-equality-assertion > invalid(15): import assert from 'node:assert';\nassert.ok((a === b)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok((a === b));

`;

exports[`prefer-equality-assertion > invalid(15): import assert from 'node:assert';\nassert.ok((a === b)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok((a === b));
    | ^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(16): import assert from 'node:assert';\nassert.ok(a === /* note */ b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(a === /* note */ b);

`;

exports[`prefer-equality-assertion > invalid(16): import assert from 'node:assert';\nassert.ok(a === /* note */ b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(a === /* note */ b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(17): import assert from 'node:assert';\nassert!(a === b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert!(a === b);

`;

exports[`prefer-equality-assertion > invalid(17): import assert from 'node:assert';\nassert!(a === b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert!(a === b);
    | ^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual!(a, b);

`;

exports[`prefer-equality-assertion > invalid(18): import assert from 'node:assert';\nassert.ok!(a === b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok!(a === b);

`;

exports[`prefer-equality-assertion > invalid(18): import assert from 'node:assert';\nassert.ok!(a === b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok!(a === b);
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual!(a, b);

`;

exports[`prefer-equality-assertion > invalid(19): import assert from 'node:assert';\n(assert as any)(a === b); 1`] = `

  1 | import assert from 'node:assert';
  2 | (assert as any)(a === b);

`;

exports[`prefer-equality-assertion > invalid(19): import assert from 'node:assert';\n(assert as any)(a === b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | (assert as any)(a === b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | (assert.strictEqual as any)(a, b);

`;

exports[`prefer-equality-assertion > invalid(2): import assert from 'node:assert';\nassert.ok(a === b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(a === b);

`;

exports[`prefer-equality-assertion > invalid(2): import assert from 'node:assert';\nassert.ok(a === b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(a === b);
    | ^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(a, b);

`;

exports[`prefer-equality-assertion > invalid(20): import assert from 'node:assert';\n(assert satisfies any)(a !== b); 1`] = `

  1 | import assert from 'node:assert';
  2 | (assert satisfies any)(a !== b);

`;

exports[`prefer-equality-assertion > invalid(20): import assert from 'node:assert';\n(assert satisfies any)(a !== b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | (assert satisfies any)(a !== b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over \`ok\` with a \`!==\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | (assert.notStrictEqual satisfies any)(a, b);

`;

exports[`prefer-equality-assertion > invalid(21): import assert from 'node:assert';\n(<typeof assert>assert)(a === b); 1`] = `

  1 | import assert from 'node:assert';
  2 | (<typeof assert>assert)(a === b);

`;

exports[`prefer-equality-assertion > invalid(21): import assert from 'node:assert';\n(<typeof assert>assert)(a === b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | (<typeof assert>assert)(a === b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | (<typeof assert>assert.strictEqual)(a, b);

`;

exports[`prefer-equality-assertion > invalid(22): import {ok} from 'node:assert';\nok!(a === b); 1`] = `

  1 | import {ok} from 'node:assert';
  2 | ok!(a === b);

`;

exports[`prefer-equality-assertion > invalid(22): import {ok} from 'node:assert';\nok!(a === b); 2`] = `

Message:
  1 | import {ok} from 'node:assert';
> 2 | ok!(a === b);
    | ^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(23): import assert from 'node:assert';\nassert.ok((a as number) === b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok((a as number) === b);

`;

exports[`prefer-equality-assertion > invalid(23): import assert from 'node:assert';\nassert.ok((a as number) === b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok((a as number) === b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual((a as number), b);

`;

exports[`prefer-equality-assertion > invalid(24): import assert from 'node:assert';\nassert.ok((a === b) as boolean); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok((a === b) as boolean);

`;

exports[`prefer-equality-assertion > invalid(24): import assert from 'node:assert';\nassert.ok((a === b) as boolean); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok((a === b) as boolean);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(25): import assert from 'node:assert';\nassert.ok(x === 0); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(x === 0);

`;

exports[`prefer-equality-assertion > invalid(25): import assert from 'node:assert';\nassert.ok(x === 0); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(x === 0);
    | ^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(26): import assert from 'node:assert';\nassert.ok(NaN === NaN); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(NaN === NaN);

`;

exports[`prefer-equality-assertion > invalid(26): import assert from 'node:assert';\nassert.ok(NaN === NaN); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(NaN === NaN);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(27): import assert from 'node:assert';\nassert.ok(x === -0); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(x === -0);

`;

exports[`prefer-equality-assertion > invalid(27): import assert from 'node:assert';\nassert.ok(x === -0); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(x === -0);
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(28): import assert from 'node:assert';\nassert.ok(x !== 0); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(x !== 0);

`;

exports[`prefer-equality-assertion > invalid(28): import assert from 'node:assert';\nassert.ok(x !== 0); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(x !== 0);
    | ^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over \`ok\` with a \`!==\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(29): import assert from 'node:assert';\nassert.ok(diff === -0.0); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(diff === -0.0);

`;

exports[`prefer-equality-assertion > invalid(29): import assert from 'node:assert';\nassert.ok(diff === -0.0); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(diff === -0.0);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(3): import assert from 'node:assert';\nassert.ok(a !== b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(a !== b);

`;

exports[`prefer-equality-assertion > invalid(3): import assert from 'node:assert';\nassert.ok(a !== b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(a !== b);
    | ^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over \`ok\` with a \`!==\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notStrictEqual(a, b);

`;

exports[`prefer-equality-assertion > invalid(30): import assert from 'node:assert';\nassert.ok(diff === +0); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(diff === +0);

`;

exports[`prefer-equality-assertion > invalid(30): import assert from 'node:assert';\nassert.ok(diff === +0); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(diff === +0);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(31): import assert from 'node:assert';\nassert.ok(diff === -1); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(diff === -1);

`;

exports[`prefer-equality-assertion > invalid(31): import assert from 'node:assert';\nassert.ok(diff === -1); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(diff === -1);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(diff, -1);

`;

exports[`prefer-equality-assertion > invalid(32): import assert from 'node:assert';\nassert.ok(diff === +5); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(diff === +5);

`;

exports[`prefer-equality-assertion > invalid(32): import assert from 'node:assert';\nassert.ok(diff === +5); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(diff === +5);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(diff, +5);

`;

exports[`prefer-equality-assertion > invalid(33): import assert from 'node:assert';\nassert.ok(diff === -1.5); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(diff === -1.5);

`;

exports[`prefer-equality-assertion > invalid(33): import assert from 'node:assert';\nassert.ok(diff === -1.5); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(diff === -1.5);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(diff, -1.5);

`;

exports[`prefer-equality-assertion > invalid(34): import assert from 'node:assert';\nassert.ok(diff === -0x10); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(diff === -0x10);

`;

exports[`prefer-equality-assertion > invalid(34): import assert from 'node:assert';\nassert.ok(diff === -0x10); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(diff === -0x10);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(diff, -0x10);

`;

exports[`prefer-equality-assertion > invalid(35): import assert from 'node:assert';\nassert.ok(diff === - 1); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(diff === - 1);

`;

exports[`prefer-equality-assertion > invalid(35): import assert from 'node:assert';\nassert.ok(diff === - 1); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(diff === - 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(diff, - 1);

`;

exports[`prefer-equality-assertion > invalid(36): import assert from 'node:assert';\nassert.ok(diff !== +1e3); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(diff !== +1e3);

`;

exports[`prefer-equality-assertion > invalid(36): import assert from 'node:assert';\nassert.ok(diff !== +1e3); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(diff !== +1e3);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over \`ok\` with a \`!==\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notStrictEqual(diff, +1e3);

`;

exports[`prefer-equality-assertion > invalid(37): import assert from 'node:assert';\nassert.ok(NaN == NaN); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(NaN == NaN);

`;

exports[`prefer-equality-assertion > invalid(37): import assert from 'node:assert';\nassert.ok(NaN == NaN); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(NaN == NaN);
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`equal\` over \`ok\` with a \`==\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(38): import assert from 'node:assert';\nassert.ok(NaN != NaN); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(NaN != NaN);

`;

exports[`prefer-equality-assertion > invalid(38): import assert from 'node:assert';\nassert.ok(NaN != NaN); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(NaN != NaN);
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`notEqual\` over \`ok\` with a \`!=\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(39): import assert from 'node:assert';\nassert.ok(Number(\"x\") == NaN); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(Number("x") == NaN);

`;

exports[`prefer-equality-assertion > invalid(39): import assert from 'node:assert';\nassert.ok(Number(\"x\") == NaN); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(Number("x") == NaN);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`equal\` over \`ok\` with a \`==\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(4): import assert from 'node:assert';\nassert.ok(a == b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(a == b);

`;

exports[`prefer-equality-assertion > invalid(4): import assert from 'node:assert';\nassert.ok(a == b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(a == b);
    | ^^^^^^^^^^^^^^^^^ Prefer \`equal\` over \`ok\` with a \`==\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a, b);

`;

exports[`prefer-equality-assertion > invalid(40): import assert from 'node:assert';\nassert.ok(0 / 0 != NaN); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(0 / 0 != NaN);

`;

exports[`prefer-equality-assertion > invalid(40): import assert from 'node:assert';\nassert.ok(0 / 0 != NaN); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(0 / 0 != NaN);
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notEqual\` over \`ok\` with a \`!=\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(41): import assert from 'node:assert';\nassert.ok(a == NaN); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(a == NaN);

`;

exports[`prefer-equality-assertion > invalid(41): import assert from 'node:assert';\nassert.ok(a == NaN); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(a == NaN);
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`equal\` over \`ok\` with a \`==\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(42): import assert from 'node:assert';\nassert.ok(NaN != a); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(NaN != a);

`;

exports[`prefer-equality-assertion > invalid(42): import assert from 'node:assert';\nassert.ok(NaN != a); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(NaN != a);
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`notEqual\` over \`ok\` with a \`!=\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(43): import assert from 'node:assert';\nassert.ok(value == Number(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(value == Number(input));

`;

exports[`prefer-equality-assertion > invalid(43): import assert from 'node:assert';\nassert.ok(value == Number(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(value == Number(input));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`equal\` over \`ok\` with a \`==\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(44): import assert from 'node:assert';\nconst n = NaN;\nassert.ok(n == n); 1`] = `

  1 | import assert from 'node:assert';
  2 | const n = NaN;
  3 | assert.ok(n == n);

`;

exports[`prefer-equality-assertion > invalid(44): import assert from 'node:assert';\nconst n = NaN;\nassert.ok(n == n); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | const n = NaN;
> 3 | assert.ok(n == n);
    | ^^^^^^^^^^^^^^^^^ Prefer \`equal\` over \`ok\` with a \`==\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(45): import assert from 'node:assert';\nconst expected = 0;\nassert.ok(Math.round(-0.4) === expected); 1`] = `

  1 | import assert from 'node:assert';
  2 | const expected = 0;
  3 | assert.ok(Math.round(-0.4) === expected);

`;

exports[`prefer-equality-assertion > invalid(45): import assert from 'node:assert';\nconst expected = 0;\nassert.ok(Math.round(-0.4) === expected); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | const expected = 0;
> 3 | assert.ok(Math.round(-0.4) === expected);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(46): import assert from 'node:assert';\nconst expected = -0;\nassert.ok(value !== expected); 1`] = `

  1 | import assert from 'node:assert';
  2 | const expected = -0;
  3 | assert.ok(value !== expected);

`;

exports[`prefer-equality-assertion > invalid(46): import assert from 'node:assert';\nconst expected = -0;\nassert.ok(value !== expected); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | const expected = -0;
> 3 | assert.ok(value !== expected);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over \`ok\` with a \`!==\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(47): import assert from 'node:assert';\nlet expected = 0;\nexpected = 1;\nassert.ok(value === expected); 1`] = `

  1 | import assert from 'node:assert';
  2 | let expected = 0;
  3 | expected = 1;
  4 | assert.ok(value === expected);

`;

exports[`prefer-equality-assertion > invalid(47): import assert from 'node:assert';\nlet expected = 0;\nexpected = 1;\nassert.ok(value === expected); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | let expected = 0;
  3 | expected = 1;
> 4 | assert.ok(value === expected);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | let expected = 0;
  3 | expected = 1;
  4 | assert.strictEqual(value, expected);

`;

exports[`prefer-equality-assertion > invalid(48): import assert from 'node:assert';\nconst [expected] = [0];\nassert.ok(value === expected); 1`] = `

  1 | import assert from 'node:assert';
  2 | const [expected] = [0];
  3 | assert.ok(value === expected);

`;

exports[`prefer-equality-assertion > invalid(48): import assert from 'node:assert';\nconst [expected] = [0];\nassert.ok(value === expected); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | const [expected] = [0];
> 3 | assert.ok(value === expected);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | const [expected] = [0];
  3 | assert.strictEqual(value, expected);

`;

exports[`prefer-equality-assertion > invalid(49): import assert from 'node:assert';\nconst expected = 1;\nassert.ok(value === expected); 1`] = `

  1 | import assert from 'node:assert';
  2 | const expected = 1;
  3 | assert.ok(value === expected);

`;

exports[`prefer-equality-assertion > invalid(49): import assert from 'node:assert';\nconst expected = 1;\nassert.ok(value === expected); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | const expected = 1;
> 3 | assert.ok(value === expected);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | const expected = 1;
  3 | assert.strictEqual(value, expected);

`;

exports[`prefer-equality-assertion > invalid(5): import assert from 'node:assert';\nassert.ok(a != b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(a != b);

`;

exports[`prefer-equality-assertion > invalid(5): import assert from 'node:assert';\nassert.ok(a != b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(a != b);
    | ^^^^^^^^^^^^^^^^^ Prefer \`notEqual\` over \`ok\` with a \`!=\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notEqual(a, b);

`;

exports[`prefer-equality-assertion > invalid(50): import assert from 'node:assert';\nassert.ok(value !== Number.NaN); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(value !== Number.NaN);

`;

exports[`prefer-equality-assertion > invalid(50): import assert from 'node:assert';\nassert.ok(value !== Number.NaN); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(value !== Number.NaN);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over \`ok\` with a \`!==\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(51): import assert from 'node:assert';\nassert.ok(value == Number.NaN); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(value == Number.NaN);

`;

exports[`prefer-equality-assertion > invalid(51): import assert from 'node:assert';\nassert.ok(value == Number.NaN); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(value == Number.NaN);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`equal\` over \`ok\` with a \`==\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(52): import assert from 'node:assert';\nassert.ok(Number.parseInt(input) === expected); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(Number.parseInt(input) === expected);

`;

exports[`prefer-equality-assertion > invalid(52): import assert from 'node:assert';\nassert.ok(Number.parseInt(input) === expected); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(Number.parseInt(input) === expected);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(53): import assert from 'node:assert';\nassert.ok(Number.parseFloat(input) != expected); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(Number.parseFloat(input) != expected);

`;

exports[`prefer-equality-assertion > invalid(53): import assert from 'node:assert';\nassert.ok(Number.parseFloat(input) != expected); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(Number.parseFloat(input) != expected);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notEqual\` over \`ok\` with a \`!=\` comparison for a clearer failure message.

`;

exports[`prefer-equality-assertion > invalid(54): import assert from 'node:assert';\nassert.ok(value === Number[key]); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(value === Number[key]);

`;

exports[`prefer-equality-assertion > invalid(54): import assert from 'node:assert';\nassert.ok(value === Number[key]); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(value === Number[key]);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(value, Number[key]);

`;

exports[`prefer-equality-assertion > invalid(6): import assert from 'node:assert';\nassert.ok(a === b, \"should match\"); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(a === b, "should match");

`;

exports[`prefer-equality-assertion > invalid(6): import assert from 'node:assert';\nassert.ok(a === b, \"should match\"); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(a === b, "should match");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(a, b, "should match");

`;

exports[`prefer-equality-assertion > invalid(7): import assert from 'node:assert';\nassert.ok(foo() === bar.baz); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(foo() === bar.baz);

`;

exports[`prefer-equality-assertion > invalid(7): import assert from 'node:assert';\nassert.ok(foo() === bar.baz); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(foo() === bar.baz);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(foo(), bar.baz);

`;

exports[`prefer-equality-assertion > invalid(8): import assert from 'node:assert';\nassert.ok(left === right === third); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.ok(left === right === third);

`;

exports[`prefer-equality-assertion > invalid(8): import assert from 'node:assert';\nassert.ok(left === right === third); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.ok(left === right === third);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(left === right, third);

`;

exports[`prefer-equality-assertion > invalid(9): import {ok} from 'node:assert';\nok(a === b); 1`] = `

  1 | import {ok} from 'node:assert';
  2 | ok(a === b);

`;

exports[`prefer-equality-assertion > invalid(9): import {ok} from 'node:assert';\nok(a === b); 2`] = `

Message:
  1 | import {ok} from 'node:assert';
> 2 | ok(a === b);
    | ^^^^^^^^^^^ Prefer \`strictEqual\` over \`ok\` with a \`===\` comparison for a clearer failure message.

`;
